foreword-yanshin, chapter-01: Periodic commit.

--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -380,6 +380,20 @@
   hyphenation = {russian},
 }
 
+@article { vernadsky1935nekotoryh,
+  author =	{Владимир Иванович Вернадский},
+  journal =	{Известия Российской академии наук},
+  title =	{О некоторых очередных проблемах радиогеологии},
+  year =	{1935},
+  series =	{7},
+  number =	{1},
+  pages =	{1-18},
+  url =		{http://mi.mathnet.ru/izv4652},
+  urldate =	{2012-07-30},
+  language =	{russian},
+  hyphenation =	{russian},
+}
+
 @mvbook { vernadsky1936istoriya-v2p1-3,
   author =	{Владимир Иванович Вернадский},
   maintitle =	{История минералов земной коры},
@@ -429,6 +443,13 @@
   location = 	 {Москва},
   pagetotal = 	 {696},
   hyphenation =	 {russian},
+}
+
+@inbook { vernadsky1954sochineniya-nekotorye,
+  crossref =	{vernadsky1954sochineniya-v1},
+  title =	{О некоторых очередных проблемах радиогеологии},
+  pages =	{659},
+  hyphenation = {russian},
 }
 
 @inbook { vernadsky1954sochineniya-himicheskie,
