--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -318,8 +318,42 @@ form of inert natural bodies is its main manifestation.
 
 
 \Section % 7
+% The heterogeneity of time (historical and geological) in the biosphere.
+One of the manifestations of this heterogeneity of the biosphere consist in the
+fact that processes occur completely differently in living matter than in inert
+matter, if they are viewed in the aspect of time.  They take place on the scale
+of \emph{historical time}\footnoteRus{\emph{исторического времени}} in living
+matter, on the scale of \emph{geological
+time},\footnoteRus{\emph{геологического времени}} whose `second' is under
+decamyriads, \ie\ a hundred thousand years of historical time,\footnote{
+	On decamyriads see \cite{vernadsky1935nekotoryh}, [as well as
+	\cite{vernadsky1954sochineniya-nekotorye}].
+} in inert matter.  This difference is expressed even more sharply outside the
+boundaries of the biosphere, and we observe in the litosphere, for the
+predominant part of its matter, a state of organization in which the majority
+of atoms, as radioactive studies show, are immobile, do not mix, noticably for
+us, in the course of tens of thousands of decamyriads---a span of time now
+accessible to our measurement.
 
-. . .
+Not long ago the view that geologists cannot study the manifestation of
+geologically long changes, occurring in the age of mankind's existence,
+dominated.  In the times of my youth we learned and thought that the change in
+climate, orography, the emergence of new species of organisms are not, as a
+general rule, detected in geological studies, are not \emph{current
+phenomena}\footnoteRus{текущим явлением} for the geologist.  Now this
+conceptual circumstance of the naturalist has sharply changed, and we can see
+ever more, and more emphatically the geological forces around us.  This
+coincided, hardly by accident, with the penetration of the conviction of the
+geological significance of Homo sapiens in the scientific consciousness, with
+the detection of a new state of the biosphere---the noosphere---and is one of
+the forms of its manifestation.  This is, of course, connected, above all, with
+the increase in precision in the natural scientific work and thought in the
+domain of the biosphere, where living matter plays a major role.
+
+The sharply distinct manifestation of living from inert in the aspect of time
+in the biosphere, with all of its significance, is a special expression of a
+far greater phenomenon, reflected in the biosphere at every step.
+
 
 \Section % 8
 
