--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -261,7 +261,7 @@ Vernadsky introduced a completely different, far deeper meaning to this term.
 He introduced the term `living matter' for the complex of living organisms
 inhabiting the Earth, but called biosphere that environment in which this
 living matter is located, \ie\ the whole water envelope of the Earth, since
-living organisms exist at even the greatest depths of the world ocean, the
+living organisms exist at even the greatest depths of the World Ocean, the
 lower part of the atmosphere, where insects, birds, and people fly, as well as
 the top part of the solid envelope of the Earth---the lithosphere, where living
 bacteria can be encountered in underground waters at depths on the order of
@@ -269,8 +269,19 @@ $2\,\mathrm{km}$, and man has now penetrated to even greater depths, exceeding
 $3\,\mathrm{km}$, with his shafts in the regions of gold deposits in India,
 South Africa, and Brazil.  There is a `film of life',\footnoteRus{пленка жизни}
 where the concentration of living matter is maximum, in the biosphere.  This is
-the land surface, the soils, and the top layers of the world ocean's waters.
+the land surface, the soils, and the top layers of the World Ocean's waters.
 The amount of living matter in the biosphere above and below it rapidly
 diminishes.
+
+V.~I.\ Verndasky estimated the total amount of living matter in the
+contemporary biosphere of the Earth, established the magnitude of the energy
+locked up in it, carefully studied the process of absorption of solar energy
+with the aid of chlorophil in green plants on land, and algae in the World
+Ocean, traced its transformation, and its influence on the generation of many
+`vadose'\footnoteRus{``вадозных''} minerals, characteristic only of the
+biosphere, clarified the character of solar energy's entry in the depths of the
+Earth with the deposits of organic matter created by it, and analyzed all
+transformations which occur in living, bioinert, and inert, as he called them,
+matter of this most import for mankind envelope of the Earth.
 
 . . .
