foreword-yanshin: Periodic commit.

--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -183,8 +183,9 @@
   hyphenation =	{russian},
 }
 
-@inbook { vernadsky1926biosfera,
+@book { vernadsky1926biosfera,
   title = {Биосфера},
+  userb = {Biosphere},
   year = {1926},
   author = {Владимир Иванович Вернадский},
   publisher = {Научн.\ Химико-Техн.\ Издат., отдел В.С.Н.Х.},
@@ -534,8 +535,10 @@
   hyphenation =	 {russian},
 }
 
-@inbook { vernadsky1965himicheskoe,
+@book { vernadsky1965himicheskoe,
   title = {Химическое строение биосферы земли и ее окружения},
+  userb = {The Chemical Structure of the Earth's Biosphere, and its
+	  Surroundings},
   author = {Владимир Иванович Вернадский},
   url = {http://books.google.com/books?id=mXP4uAAACAAJ},
   year = {1965},
