--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -3,7 +3,7 @@ Manifestation of the historical moment mankind is currently living through as a
 geological process.  Evolution of the species of living matter and evolution of
 the biosphere into the noosphere.  This evolution cannot be stopped by the
 course of global human history.  Scientific thought and mankind's daily lives
-as expressions of it.}
+as expressions of it.}\label{ch:2}
 
 \Section % 14
 We are not yet conscious of, we are not yet living the realization of the
