--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -284,4 +284,88 @@ Earth with the deposits of organic matter created by it, and analyzed all
 transformations which occur in living, bioinert, and inert, as he called them,
 matter of this most import for mankind envelope of the Earth.
 
+V.~I.\ Vernadsky presented the results of his studies in numerous articles, the
+book \btcite{vernadsky1926biosfera}, which was first published in 1926, and has
+been subsequently reprinted a few times, and in the fundamental work
+\btcite{vernadsky1965himicheskoe}, which was first published after the author's
+death, in 1965.  Many articles, brochures, and books dedicated to V.~I.\ 
+Vernadsky's teachings about the biosphere, to its detailed presentation, to
+commentary on it, and, unfortunately, only partially, to its development, have
+appeared in the Soviet and in the foreign press in connection with the
+increased attention to the tasks of the preservation of
+nature\footnoteRus{охраны природы} during the past decade.  There is,
+therefore, no need to delve into it in the foreword to the present book.  It
+is, however, important to emphasize that V.~I.\ Vernadsky viewed human activity
+as a process imposed on the biosphere, foreign to it by its
+nature\footnoteTransl{
+	?!!  What are the Yanshins smoking?  See \autoref{ch:2}! [---Pav]
+} from the beginning.  We can suppose that the technogenic character of this
+human activity, interfering much with the naturally occurring course of natural
+phenomena,\footnoteRus{естественный ход природных процессов} contradicting
+them, prompted him to have such thoughts.
+
+We can judge of the [view of the]\footnoteTransl{
+	Interpolated to express the implied meaning. [---Pav]
+} `imposed',\footnoteRus{``наложенном''} foreign character of mankind's
+industrial activity from numerous statements of V.~I.\ Vernadsky even in his
+works from the beginning of the thirties.  So, he wrote in the mentioned
+\rtitle{History of Natural Waters} about technogenic solid minerals, and
+waters: ``These new chemical compounds---`artificial', \ie\ created with the
+participation of the will and the consciousness of man, can, for now, be put
+aside in the study of the history of natural
+bodies''.\footcite[87]{vernadsky1960sochineniya-istoriya}\fncomma
+\footnoteTransl{
+	Here's what \refcite[§133]{vernadsky1933istoriya-v2p1-1} says:
+	
+	\smallskip
+	\begingroup \leftskip 3em\rightskip 1em
+	  \textbf{§133. }We are now living at only the very beginning of the
+	  Psychozoic Age.  It is impossible to encompass its results
+	  completely.
+	  
+	  We are still in a transitional period.  However, we cannot leave
+	  without attention an on-rushing force changing the history and
+	  composition of natural waters.
+	  
+	  Problems of the quantification---in all varieties---of the change of
+	  natural waters by human culture have come to the fore, it being
+	  necessary to reconstruct the character of those waters, which existed
+	  a hundred thousand, and more, years ago, as well as in the previous
+	  geological periods.  These problems have hardly been touched upon,
+	  but they can be encompassed by scientific thought, and it is
+	  necessary to strive toward their resolution, and have them in mind in
+	  studying the history of natural waters.
+	  
+	  We find ourselves in the same condition, which we run into in other
+	  branches of mineralogy,---with the emergence of new natural
+	  compounds created by culture, changing the history of natural bodies
+	  of the same, or of similar composition.  I already regarded that in
+	  the history of metals (I, §267 etc.); and the same is reflected in
+	  the history of natural gases ($CO_2, SO_3, H_2S$ and so forth).
+	  These new types of chemical compounds---`artificial', \ie\ created
+	  with the participation of the will and consciousness of man, can, for
+	  now, be left aside in studying the history of natural bodies.
+	  
+	  But this is, obviously, a temporary solution to the problem.  We must
+	  never fail to take into account the products of human work in the
+	  history of numerous minerals, for example, carbon dioxide.  We must
+	  neither fail to take them into account in the history of natural
+	  waters.  However, on the other hand, it is impossible to include it
+	  completely in our present considerations.  A host of waters connected
+	  with engineering are constantly and quickly changing,---are
+	  temporary, transitional phenomena.  Many of the new waters are
+	  negligible in mass---are rare, quickly disappearing `minerals'.
+	  
+	  I will consider these new waters---a creation of cultural life---only
+	  in so far as this is necessary for understanding the essential main
+	  features of the history of natural waters.  This, however, is, of
+	  course, only a temporary solution of the question---this is the
+	  intrinsic\footnoteRus{исконный} path of the naturalist, seeking the
+	  important, but not a logical sequence, in the complex phenomenon,
+	  real at a given moment.
+	  \par
+	\endgroup
+	[---Pav]
+}
+
 . . .
