--- a/tex/bib/leibnitz.bib
+++ b/tex/bib/leibnitz.bib
@@ -1,4 +1,5 @@
 @mvbook { leibnitz1900oeuvres,
+  author = {Leibniz, Gottfried Wilhelm Freiherr von},
   booktitle = {Œuvres Philosophiques de Leibniz},
   maintitle = {Œuvres Philosophiques de Leibniz},
   year = {1900},
@@ -26,7 +27,7 @@
   title = {Theodicy},
   subtitle = {Essays on the goodness of God, the freedom of man, and the
 	origin of evil},
-  author = {Leibniz, Gottfried Wilhelm, Freiherr von},
+  author = {Leibniz, Gottfried Wilhelm Freiherr von},
   isbn = {O-87548-437-9},
   origtitle = {Essais de Théodicée},
   year = {1985},
