chapter-01: Daily commit.

--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -546,6 +546,18 @@
   hyphenation = {russian},
 }
 
+@book { vernadsky2001himicheskoe,
+  title = {Химическое строение биосферы земли и ее окружения},
+  userb = {The Chemical Structure of the Earth's Biosphere, and its
+	  Surroundings},
+  author = {Владимир Иванович Вернадский},
+  url = {http://vernadsky.lib.ru/e-texts/archive/Vernadsky_V.I.__Himicheskoje_Strojenieje_Biosfery_Zemli_i_eje_Okruzhenija__2001_376s.djvu},
+  year = {2001},
+  publisher = {Наука},
+  hyphenation = {russian},
+}
+
+
 @inbook { vernadsky1980problemy,
   title = {Проблемы биогеохимии},
   author = {Владимир Иванович Вернадский},
