--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -356,8 +356,81 @@ far greater phenomenon, reflected in the biosphere at every step.
 
 
 \Section % 8
+% The plasticity of living matter.  The evolution of the biosphere.
+The living matter of the biosphere sharply differs from its inert matter in two
+main processes, which have an immense geological significance, and give the
+biosphere a completely different shape, which does not exist in any other
+envelope of the planet.  These two processes are manifested only against the
+background of geological time.  They never cease, and never go backwards.
 
-. . .
+First, \emph{the power of the expression of living matter in the biosphere
+grows} in the course of geological time, the significance of living matter in
+the biosphere, and its influence on the inert matter of the biosphere
+increases.  This process is little taken into account to this day.  I will have
+to deal with it all the time further on.
+
+Another process, known to all, and having imprinted a deepest impression on all
+scientific thought of the $19^\mathrm{th}$ and $20^\mathrm{th}$ centuries since
+the middle of the $19^\mathrm{th}$ century, has attracted far more attention,
+and has been studied much more.  This is the process of \emph{the evolution of
+species} in the course of geological time---the sharp change in the living
+natural bodies themselves.
+
+We observe a sharp change in the natural bodies themselves in the course of
+geological time only in living matter.  Some organisms turn into others, die
+out, as we say, or change fundamentally.
+
+Living matter is \emph{plastic}, changes, adapts to changes in its environment,
+but also, possibly, has its own evolutionary process, manifested in changes in
+the course of geological time, independent of the changes in the environment.
+This is, perhaps, indicated by the incessant growth, with intermissions, of the
+central nervous system of animals in its significance in the biosphere, and in
+the depth of the reflection of living matter in its surroundings,\footnote{
+	That the evolution of nervous tissue is incessantly ongoing in the
+	course of geological time has been indicated more than once, but, as
+	far as I know, it has not been completely analyzed scientifically and
+	philosophically.  As the question here is not about a hypothesis, and
+	not about a theory, the fact of its evolution cannot be denied---there
+	can only be objections to its explanation.  The recognition of Redi's
+	principle limits the number of explanations.
+} in the former's penetration into the latter, in the course of geological
+time.
+
+The plasticity of living matter is, obviously, a very complex phenomenon, as
+there are organisms which do not change in their morphological and
+physiological structure noticeably for us for hundreds of millions of years, up
+to five hundred million and more, over myriads of generations.  These are the
+so-called \emph{persistents}\footnoteRus{
+	персистенты.  These seem to be popularly known as \emph{living fossils}
+	today. [---Pav]
+}\fncomma\footnoteEd{
+	persistents\dots\ See \cite[269]{vernadsky1965himicheskoe}. [---Ed.]
+}---a phenomenon in biology which has been, unfortunately, extremely little
+studied.  Nevertheless, we observe in them, as a phenomenon common to living
+matter, a \emph{plastic evolutionary} process, for which there is not even a
+symptom in inert natural bodies.  In these latter we see the same minerals, the
+same formation processes, the same rocks, and so forth \emph{now,} which were
+there \emph{two billion years, and more, ago.}
+
+The evolutionary process of living matter encompasses the whole biosphere
+incessantly during all geological time and, in different ways, less strongly,
+still affects its inert natural bodies.  With this we already can, and must
+talk about \emph{the evolutionary process of the biosphere itself,} occurring
+in the inert mass\footnoteRus{инертной массе} of its inert and living natural
+bodies, changing visibly in the course of geological time.
+
+The reflection of living matter in its surrounding environment changes sharply
+due to the evolution of species, ongoing constantly, and never ceasing.  Thanks
+to this process, evolution---change---is transferred to the natural bioinert
+and biogenic bodies, which play a major role in the biosphere---to soils, to
+surface and underground waters (in seas, lakes, rivers, etc.), to coal,
+bitumen, limestones, organogenic ores, and so forth.  The soils and rivers of
+the Devonian, for example, are different from the soils [and
+rivers]\footnoteTransl{Interpolated from the implied meaning. [---Pav]} of the
+Tertiery, and of our period.  This is an area of new phenomena, hardly taken
+into account by scientific thought.  \emph{The evolution of species turns into
+an evolution of the biosphere.}
+
 
 \Section % 9
 
