--- a/tex/thought.tex
+++ b/tex/thought.tex
@@ -25,7 +25,7 @@
 
 %\usepackage[pdftex,colorlinks=true]{hyperref} % Load last.
 % Add option 'draft' when debugging hyper-links accross page breaks:
-\usepackage[colorlinks=true,pdfencoding=auto,linktoc=all,draft]{hyperref}
+\usepackage[colorlinks=true,pdfencoding=auto,linktoc=all]{hyperref}
 
 
 % Load bibliography databases:
@@ -97,7 +97,7 @@
 %%
 % Footnotes:
 % Add a comma between the footnote marks:
-\newcommand{\fncomma}{${\rule{-1pt}{0pt}}^{,\,}$}
+\newcommand{\fncomma}{${\rule{-1pt}{0pt}}^{, }$}
 \DeclareNewFootnote{default} % Author's footnotes.
 \DeclareNewFootnote{Ed}[fnsymbol] % The editor's footnotes.
 \DeclareNewFootnote{Transl}[Roman] % Our (translator's) footnotes.
@@ -166,6 +166,7 @@
 \phantomsection
 \addcontentsline{toc}{part}{Bibliography}
 
+\onecolumn
 \printbibliography
 
 \end{document}
