foreword-yanshin, chapter-01: Daily commit.

--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -355,7 +355,7 @@ in the biosphere, with all of its significance, is a special expression of a
 far greater phenomenon, reflected in the biosphere at every step.
 
 
-\Section % 8
+\Section \label{sec:8}% 8
 % The plasticity of living matter.  The evolution of the biosphere.
 The living matter of the biosphere sharply differs from its inert matter in two
 main processes, which have an immense geological significance, and give the
@@ -432,9 +432,60 @@ into account by scientific thought.  \emph{The evolution of species turns into
 an evolution of the biosphere.}
 
 
-\Section % 9
+\Section \label{sec:9}% 9
+% Scientific thought is not an arbitrary process, and is not governed by the
+% arbitrary will of man.
+The evolutionary process has acquired, in addition, a special geological
+significance thanks to the fact that it has created a new geological
+force---the scientific thought of social mankind.\footnoteRus{научную мысль
+социального человечества}
 
-. . .
+We are now fully living through its prominent entry in the geological history
+of the planet.  The intensive growth of the influence of a single species of
+living matter\footnoteRus{одного видового живого вещества}---civilized
+mankind---on the biosphere is observable during the last millenia.  The
+biosphere is transitioning into a new state---\emph{into the noosphere}---under
+the influence of scientific thought and human labor.
+
+Mankind is encopassing the whole planet, is distinguishing itself, is diverging
+from other living organisms as a new, unprecedented geological force by a
+lawful motion, stretching one--two million years, with an ever-increasing in
+its manifestation rate.  An ever-growing set of inert natural bodies, \emph{new
+for the biosphere,} and new, great natural phenomena are being created by this
+means in the biosphere at a speed comparable to that of reproduction,
+expressible by a geometric progression in the course of time.
+
+The biosphere is changing drastically in front of our eyes.  And there can
+harldy be any doubt that its transformation, manifested in this way, by
+scientific thought through organized human labor is not an arbitrary
+phenomenon,\footnoteRus{случайное явление, \ie\ also chance phenomenon, or
+accidental phenomenon} depending on the will of man, but is a tempestuous
+\emph{natural process,}\footnoteRus{стихийный \emph{природный процесс}} whose
+roots lie deep, and had been prepared by an evolutionary process whose duration
+is calculated in the hundreds of millions of years.
+
+Man must understand, as only a scientific, but not a philosophical or a
+religious conception of the world can encompass this, that \emph{he is not an
+arbitrary, independent of its surroundings}---biosphere and
+noosphere---freely-acting natural phenomenon.  He comprises an unavoidable
+manifestation of a great natural process, lawfully stretching throughout the
+course of, at least, two billion years.
+
+In the present times, under the influence of the surrounding horrors of life,
+along with an unprecedented flowering of scientific thought, it has become
+necessary to hear of the approach of barbarity, of the breakdown of
+civilization, of the self-annihilation of mankind.  These attitudes, and these
+reasonings appear to me to be consequences of insufficiently deep penetration
+into our surroundings.  Scientific thought not having entered everyday life
+yet, we are still living under the strong influence of philosophical and
+religious habits, not corresponding to the reality of contemporary knowledge,
+which we still have not grown out of.
+
+Scientific knowledge, being manifested as a geological force creating the
+noosphere, cannot lead to results, which contradict that geological process,
+whose creation it is.  This is not an arbitrary phenomenon---its roots are
+extremely deep.
+
 
 \Section % 10
 
