--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -297,12 +297,10 @@ nature\footnoteRus{охраны природы} during the past decade.  There i
 therefore, no need to delve into it in the foreword to the present book.  It
 is, however, important to emphasize that V.~I.\ Vernadsky viewed human activity
 as a process imposed on the biosphere, foreign to it by its
-nature\footnoteTransl{
-	?!!  What are the Yanshins smoking?  See \autoref{ch:2}! [---Pav]
-} from the beginning.  We can suppose that the technogenic character of this
-human activity, interfering much with the naturally occurring course of natural
-phenomena,\footnoteRus{естественный ход природных процессов} contradicting
-them, prompted him to have such thoughts.
+nature from the beginning.  We can suppose that the technogenic character of
+this human activity, interfering much with the naturally occurring course of
+natural phenomena,\footnoteRus{естественный ход природных процессов}
+contradicting them, prompted him to have such thoughts.
 
 We can judge of the [view of the]\footnoteTransl{
 	Interpolated to express the implied meaning. [---Pav]
@@ -315,7 +313,7 @@ participation of the will and the consciousness of man, can, for now, be put
 aside in the study of the history of natural
 bodies''.\footcite[87]{vernadsky1960sochineniya-istoriya}\fncomma
 \footnoteTransl{
-	Here's what \refcite[§133]{vernadsky1933istoriya-v2p1-1} says:
+	Here's what \refcite[§133]{vernadsky1933istoriya-v2p1-1} actually says:
 	
 	\smallskip
 	\begingroup \leftskip 3em\rightskip 1em
@@ -367,5 +365,26 @@ bodies''.\footcite[87]{vernadsky1960sochineniya-istoriya}\fncomma
 	\endgroup
 	[---Pav]
 }
+
+However, V.~I.\ Vernadsky got to arrive at the unavoidable conclusion about the
+evolution of the Earth's biosphere, about the quantitative and the qualitative
+change of its main component part---living matter, about the stages of the
+biosphere's evolution in the last decade of his life.  Such a course of thougts
+brought him to the conclusion that the emergence of man, and the impact of his
+activity on the surrounding natural environment is not an accident, is not an
+`imposed' process on the natural course of events, but is, rather, a definite,
+lawful stage of the evolution of the biosphere.  This stage has to lead to the
+condition that the Earth's biosphere must transition into a new state, which he
+proposed to call `noosphere' (from the Greek word
+`noos'\footnoteRus{``ноос''}---mind), under the influence of scientific
+thought, and the collective labor of unified mankind, directed toward the
+satisfaction of all of its material and spiritual necessities.  V.~I.\
+Vernadsky did not invent this term, nor the term `biosphere' himself.  He
+lectured on biogeochemistry and the development of the biosphere at Collège de
+France from 1922 to 1926 during his long foreign assignment, and the French
+mathematician Édouard Le Roy, student of these lectures, published an article
+about them in 1927, in which he employed, for the first time, the term
+`noosphere', used by other French scientists and by V.~I.\ Vernadsky further
+on.
 
 . . .
