foreword-yanshin, chapter-01: Periodic commit.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -13,6 +13,34 @@
   language = {french},
 }
 
+@article { yanshin1966tektonika,
+  author =	{Александр Леонидович Яншин},
+  title =	{Тектоника Евразии},
+  subtitle =	{Объяснительная записка к Тектонической карте Евразии},
+  journal =	{Тектоническая карта Евразии},
+  publisher =	{Наука},
+  year =	{1966},
+  hyphenation =	{russian},
+}
+
+@article { yanshin1973nazyvaemyh,
+  author =	{Александр Леонидович Яншин},
+  title =	{О так называемых мировых трансгрессиях и регрессиях},
+  journal =	{Бюллетень МОИП},
+  year =	{1973},
+  number =	{2},
+  volume =	{48},
+  hyphenation =	{russian},
+}
+
+@book { budyko1974klimat,
+  author =	{Михаил Иванович Будыко},
+  title =	{Климат и жизнь},
+  year =	{1974},
+  location =	{Москва},
+  hyphenation =	{russian},
+}
+
 @article { pavlov1922lednikovye,
   title = {Ледниковые и межледниковые эпохи Европы в связи с историей
   	ископаемого человека},
@@ -370,4 +398,13 @@
   url = {http://books.google.com/books?id=intROeJdmdMC},
   year = {1851},
   publisher = {H.G. Bohn},  
+}
+
+@online { dana1866classification,
+  author =	{James Dwight Dana},
+  title =	{The Classification of Animals},
+  subtitle =	{On the Principle of Cephalization},
+  year =	{1866},
+  url =		{http://www.geology.19thcenturyscience.org/books/1863-Dana-ClassAnim/htm/doc.html},
+  urldate =	{2012-08-07},
 }
