--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -551,7 +551,7 @@
   userb = {The Chemical Structure of the Earth's Biosphere, and its
 	  Surroundings},
   author = {Владимир Иванович Вернадский},
-  url = {http://vernadsky.lib.ru/e-texts/archive/Vernadsky_V.I.__Himicheskoje_Strojenieje_Biosfery_Zemli_i_eje_Okruzhenija__2001_376s.djvu},
+  url = {http://vernadsky.lib.ru/e-texts/archive/Vernadsky_V.I.__Himicheskoje_Strojenije_Biosfery_Zemli_i_eje_Okruzhenija__2001_376s.djvu},
   year = {2001},
   publisher = {Наука},
   hyphenation = {russian},
@@ -604,6 +604,17 @@
   hyphenation = {russian},
 }
 
+@article { vernadsky1991dnevnik1938,
+  author =	 {Владимир Иванович Вернадский},
+  title = 	 {Дневник 1938 г.},
+  journal = 	 {Дружба народов},
+  year = 	 {1991},
+  number = 	 {3},
+  pagetotal = 	 {246},
+  note = 	 {Публ. Мочалова},
+  hyphenation =  {russian},
+}
+
 @book { vernadsky1991thought,
   title = {Научная мысль как планетное явление},
   author = {Владимир Иванович Вернадский},
@@ -636,19 +647,32 @@
   hyphenation = {russian},
 }
 
+@article { vernadsky1995dnevnik1941,
+  author =	 {Владимир Иванович Вернадский},
+  title =	 {``КОРЕННЫЕ ИЗМЕНЕНИЯ НЕИЗБЕЖНЫ\dots''},
+  subtitle = 	 {Дневник 1941 года},
+  journal = 	 {Новый Мир},
+  year = 	 {1995},
+  number = 	 {5},
+  note = 	 {Публикация, подготовка текста и примечания И.~Мочалова},
+  url =		 {http://magazines.russ.ru/novyi_mi/1995/5/vernads.html},
+  urldate =	 {2012-08-06},
+  hyphenation =  {russian},
+}
+
 @mvbook { vernadsky1997thought,
-  series = {Научное знание.  Научное творчество.  Научная мысль},
-  booktitle = {О науке},
-  title = {Научная мысль как планетное явление},
-  author = {Владимир Иванович Вернадский},
-  year = {1997},
-  origdate = {1938},
-  volume = 1,
-  location = {Дубна},
-  publisher = {Феникс},
-  url = {http://elibrary.ru/books/vernadsky/obl.htm},
-  language = {russian},
-  hyphenation = {russian},
+  series =	{Научное знание.  Научное творчество.  Научная мысль},
+  booktitle =	{О науке},
+  title =	{Научная мысль как планетное явление},
+  author = 	{Владимир Иванович Вернадский},
+  year =	{1997},
+  origdate =	{1938},
+  volume =	{1},
+  location =	{Дубна},
+  publisher =	{Феникс},
+  url =		{http://elibrary.ru/books/vernadsky/obl.htm},
+  language =	{russian},
+  hyphenation =	{russian},
 }
 
 @book { vernadsky2001thought,
