--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -488,8 +488,88 @@ extremely deep.
 
 
 \Section % 10
+% The related process of cephalization, and the intensification of evolution.
+% The critical periods of geological history, which reflect the periods of
+% evolutionary intensificaton.
+This process is connected with the creation of the human brain.  It was
+detected in the history of science in the form of an empirical generalization
+by the profound American naturalist, great geologist, zoologist,
+paleontologist, and mineralogist J.~D.\ Dana [1813--1895] in New Haven.  He
+published his conclusion almost 80 years ago.  Strangely, this generalization
+has not entered daily life to this day, has been almost forgotten, and has not
+undergone the necessary development to this day.  I will return to this later.
+Here I will note that Dana presented his empirical generalization in the
+language of philosophy and theology, and it, it seems, was connected to
+conceptions, scientifically unacceptable today.
 
-. . .
+Speaking in contemporary scientific language, Dana noted that a more and more
+advanced---central nervous system---\emph{brain} than that which existed
+earlier on our planet is manifested [in] some parts of its inhabitants in the
+course of geological time.\nocite{dana1866classification}  This process, called
+\emph{encephalization} by him, never goes backward, [even though] it ceases
+many times, sometimes for many millions of years.  The process is, therefore,
+expressed by a polar temporal vector, whose direction does not change.  We
+shall see that the geometrical state of space\footnoteRus{геометрическое
+состояние пространства} occupied by living matter is also characterized by
+polar vectors, that there is no place for straight lines in it.
+
+The evolution of the biosphere is connected with \emph{the intensification of
+the evolutionary process} of living matter.
+
+We now know that critical periods in the history of the terrestrial crust are
+emerging, in which geological activity, in the most diverse of its
+manifestations, is increasing in its rate.  This increase is, of course,
+unnoticeable in historical time, and can be noted scientifically only on the
+scale of geological time.
+
+These periods can be considered \emph{critical} in the history of the planet,
+and everything is indicating that they are occasioned by deep, from the
+standpoint of the Earth's crust, processes, apparently exceeding its
+boundaries.  A simultaneous increase in volcanic, orogenic, glacial phenomena,
+marine transgressions, and other geological processes simultaneously
+encompassing a great part of the biosphere throughout its whole extent has been
+observed.\footnoteEd{
+	More precise stratigraphic studies, done in various parts of our planet
+	during the 45-year post-war period require us to modify our conception
+	of `critical ages' in the history of the Earth somewhat.  Orogenic
+	phenomena, as well as marine transgressions, turned out to have
+	occurred at greatly different times on different continents, and even
+	in different parts of the same massive continent.  [See
+	\cite{yanshin1966tektonika, yanshin1973nazyvaemyh}.]  However, there
+	undoubtedly were outbreaks of volcanic activity on the territories of
+	contemporary continents in the history of the Earth.  Judging from the
+	estimates produced by A.~B.\ Ronov\footnoteRus{А.~Б.\ Роновым} of the
+	mass of volcanic products, they took place throughout the last 600
+	million years in the middle Devonian, at the end of the
+	Carboniferous--beginning of the Permian, at the end of the Triassic,
+	and to a less significant degree in the middle Cretaceous, and in the
+	Neogene.  Each such outbreak of volcanism led to a planetary change in
+	the composition of the atmosphere---to an increase in its $CO_2$
+	content, and to a decrease of the oxygen content, which brought, on the
+	one hand, a decrease of temperature, leading to the formation of polar
+	ice caps, and, on the other,---an intense development of vegetation,
+	and the return of oxygen to the atmosphere, as a result of the
+	processes of photosynthesis.  [See \cite{budyko1974klimat}] Apparently,
+	``most important, and great changes in the structure of living matter''
+	were created in these periods, \ie\ they were `critical' in the sense
+	in which V.~I.\ Vernadsky used this word.  [---Ed.]
+}  The evolutionary process coincides in its intensification, in its greatest
+changes with these periods.  Most important and great changes in the structure
+of living matter, which are a clear expression of the depth of the geological
+significance of this plastic reflection of living matter in the resulting
+changes of the planet, were created in these periods.
+
+There is no theory, precise scientific explanation of this main phenomenon in
+the history of the planet.  It emerged empirically, and
+unconsciously---penetrated science unnoticed, and its history has remained
+unwritten.  A major role in it played American geologists, specifically, J.~D.\ 
+Dana.  It has pervaded the scientific thought of our century.
+
+It is, however, possible, and necessary to approach it with measure and number.
+The geological length of its duration can be measured, and, in this way, the
+change in the rate of geological processes can be characterized numerically.
+This is one of the immediate tasks of radiogeology.
+
 
 \Section % 11
 
