--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -387,4 +387,29 @@ about them in 1927, in which he employed, for the first time, the term
 `noosphere', used by other French scientists and by V.~I.\ Vernadsky further
 on.
 
+The work \rtitle{Scientific Thought as a Planetary Phenomenon}, judging from
+the diaries of V.~I.\ Vernadsky and from his letters, was written mainly in
+1937--1938, \ie\ during the most tragic years of our history.  V.~I.\ Vernadsky
+was far from indifferent to the events of those days.  His friends and students
+were repressed.  Trying to prove their innocence, and the erroneousness of
+their arrests, he wrote letters to J.~V.\ Stalin, N.~I.\ Ezhov, L.~P.\ Beria.
+His diaries from these years are filled with heavy words.  But the book,
+written by him for the future generations, was permeated by optimism, faith in
+the triumph of human reason.
+
+It is hard to completely characterize the content of the book.  It is
+significantly broader than the book's title, though the idea of the global
+significance of scientific thought permeates it from beginning to end, and
+connects all of its parts.  Essentially, this book is an introduction to the
+teaching of the noosphere.  Many places in it are dedicated to the analysis of
+the conception of this term.  Along with that, the role of mankind in the
+development of the biosphere is painted with the broad strokes of a great
+painter, the concept of living matter and its state of organization, of the
+evolution of the biosphere and the inevitability of its gradual transformation
+into the noosphere, of the conditions neccessary for such a transition, of the
+basic stages of development of human culture and its further destiny, of
+biogeochemistry as a main scientific area of the study of the biosphere, of the
+fundamental differences between the living and the inert matter of this evelope
+of the Earth is given.
+
 . . .
